# benchmark

./: .gitignore  CMakeLists.txt  bench.cpp  record  report  report-callee  stat
setup/: debian_setup  debian_undo_setup  run_this_in_perf.shell_to_see_that_it_is_working
